--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
     <title>Michael Reiter :: Professional Biography</title>
   </head>
   
@@ -49,7 +50,7 @@ and <a href="http://cacm.acm.org/">Communications of the ACM</a>.  He
 also served on the Emerging Technology and Research Advisory Committee
 for the United States Department of Commerce for four years.</p>
 
-Dr. Reiter was named
+<p>Dr. Reiter was named
 an <a href="https://awards.acm.org/award_winners/reiter_NC55657">ACM
 Fellow</a> in 2008 and
 an <a href="http://services27.ieee.org/fellowsdirectory/getdetailprofile.html?custNum=45f3SvbQHPKrjG32f9f9Dg%3D%3D">IEEE
@@ -57,9 +58,8 @@ Fellow</a> in 2014.  In 2016, he was awarded
 the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
 Contributions Award</a> from the ACM Special Interest Group on
 Security, Audit and Control (SIGSAC), for "pioneering research
-contributions and leadership in computer and information security".
+contributions and leadership in computer and information security".</p>
 
-<p><a href="./index.html"><font size="-2">Back to
-Michael Reiter's home page</font></a></p>
+<p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </body>
 </html>
