--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,7 @@
   </head>
   
 <body>
+<div class="centerh">
 <h2>Michael Reiter :: Professional Biography</h2>
 
 <p>Michael Reiter is the Lawrence M. Slifkin Distinguished Professor
@@ -61,5 +62,6 @@ Security, Audit and Control (SIGSAC), for "pioneering research
 contributions and leadership in computer and information security".</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
+</div>
 </body>
 </html>
