--- a/bio.html
+++ b/bio.html
@@ -9,11 +9,13 @@
 <div class="centerh">
 <h2>Michael Reiter :: Professional Biography</h2>
 
-<p>Michael Reiter is the Lawrence M. Slifkin Distinguished Professor
-in the <a href="http://www.cs.unc.edu/">Department of Computer
-Science</a> at the <a href="http://www.unc.edu/">University of North
-Carolina at Chapel Hill</a> (UNC).  He received the B.S. degree in
-mathematical sciences from UNC in 1989, and the M.S. and Ph.D. degrees
+<p>Michael Reiter, presently the Lawrence M. Slifkin Distinguished
+Professor in the <a href="http://www.cs.unc.edu/">Department of
+Computer Science</a> at the <a href="http://www.unc.edu/">University
+of North Carolina at Chapel Hill</a> (UNC), plans to transition
+to <a href="http://www.duke.edu/">Duke University</a> in January 2021.
+He received the B.S. degree in mathematical sciences from UNC in 1989,
+and the M.S. and Ph.D. degrees
 in <a href="http://www.cs.cornell.edu">Computer Science</a>
 from <a href="http://www.cornell.edu">Cornell University</a> in 1991
 and 1993, respectively.  He joined AT&T Bell Labs in 1993 and became a
@@ -37,10 +39,10 @@ fields.  He served as program chair for
 the <a href="http://www.ieee-security.org/TC/SP-Index.html">the
 flagship computer security conferences of the
 IEEE</a>, <a href="http://www.sigsac.org/ccs.html">the ACM</a>,
-and <a href="http://www.isoc.org/isoc/conferences/ndss/">the Internet
+and <a href="https://www.ndss-symposium.org">the Internet
 Society</a>, and of <a href="http://www.dsn.org/">the flagship
 dependability conference of the IEEE</a>; as Editor-in-Chief
-of <a href="http://www.acm.org/tissec/">ACM Transactions on
+of <a href="https://dl.acm.org/journal/tops">ACM Transactions on
 Information and System Security</a>; and on the editorial boards
 of <a href="http://www.computer.org/tse">IEEE Transactions on Software
 Engineering</a>, <a href="http://www.computer.org/tdsc">IEEE
