Shortened and updated bio

--- a/bio.html
+++ b/bio.html
@@ -9,28 +9,22 @@
 <div class="centerh">
 <h2>Michael Reiter :: Professional Biography</h2>
 
-<p>Michael Reiter, presently the Lawrence M. Slifkin Distinguished
-Professor in the <a href="http://www.cs.unc.edu/">Department of
-Computer Science</a> at the <a href="http://www.unc.edu/">University
-of North Carolina at Chapel Hill</a> (UNC), plans to transition
-to <a href="http://www.duke.edu/">Duke University</a> in January 2021.
-He received the B.S. degree in mathematical sciences from UNC in 1989,
-and the M.S. and Ph.D. degrees
-in <a href="http://www.cs.cornell.edu">Computer Science</a>
-from <a href="http://www.cornell.edu">Cornell University</a> in 1991
-and 1993, respectively.  He joined AT&T Bell Labs in 1993 and became a
-founding member of <a href="http://www.research.att.com">AT&T Labs
-&#8211; Research</a> when <a href="http://www.ncr.com">NCR</a> and
-Lucent Technologies (including <a href="http://www.bell-labs.com">Bell
-Labs</a>) were split away from <a href="http://www.att.com">AT&T</a>
-in 1996.  He then returned to Bell Labs in 1998 as Director of Secure
-Systems Research.  In 2001, he
-joined <a href="http://www.cmu.edu/">Carnegie Mellon University</a> as
-a Professor of <a href="http://www.ece.cmu.edu/">Electrical & Computer
-Engineering</a> and <a href="http://www.csd.cs.cmu.edu/">Computer
-Science</a>, where he was also the founding Technical Director
-of <a href="http://www.cylab.cmu.edu/">CyLab</a>.  He joined the
-faculty at UNC in 2007.</p>
+<p>Michael Reiter is a Professor
+of <a href="http://www.cs.duke.edu">Computer Science</a>
+and <a href="http://www.ece.duke.edu">Electrical & Computer
+Engineering</a> at <a href="http://www.duke.edu">Duke University</a>.
+He received the B.S. degree in mathematical sciences from
+the <a href="http://www.unc.edu">University of North Carolina at
+Chapel Hill</a> (UNC) in 1989, and the M.S. and Ph.D. degrees in
+computer science from <a href="http://www.cornell.edu">Cornell
+University</a> in 1991 and 1993, respectively.  His previous positions
+include Director of Secure Systems Research
+at <a href="http://www.bell-labs.com">Bell Labs</a>; Professor of
+Electrical & Computer Engineering and Computer Science
+at <a href="http://www.cmu.edu/">Carnegie Mellon University</a>, where
+he was the founding Technical Director
+of <a href="http://www.cylab.cmu.edu/">CyLab</a>; and Distinguished
+Professor of Computer Science at UNC.</p>
 
 <p>Dr. Reiter's research interests include all areas of computer and
 communications security and distributed computing.  He regularly
