--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
   </head>
   
 <body>
-<div class="centerh">
+<div class="centervh">
 <h2>Michael Reiter :: Professional Biography</h2>
 
 <p>Michael Reiter is a Professor
