--- a/bio.html
+++ b/bio.html
@@ -26,16 +26,16 @@ he was the founding Technical Director
 of <a href="http://www.cylab.cmu.edu/">CyLab</a>; and Distinguished
 Professor of Computer Science at UNC.</p>
 
-<p>Dr. Reiter's research interests include all areas of computer and
+<p>Prof. Reiter's research interests include all areas of computer and
 communications security and distributed computing.  He regularly
 publishes and serves on conference organizing committees in these
 fields.  He served as program chair for
 the <a href="http://www.ieee-security.org/TC/SP-Index.html">the
 flagship computer security conferences of the
 IEEE</a>, <a href="http://www.sigsac.org/ccs.html">the ACM</a>,
-and <a href="https://www.ndss-symposium.org">the Internet
-Society</a>, and of <a href="http://www.dsn.org/">the flagship
-dependability conference of the IEEE</a>; as Editor-in-Chief
+and <a href="https://www.ndss-symposium.org">the Internet Society</a>,
+and of <a href="http://www.dsn.org/">the flagship dependability
+conference of the IEEE</a>; as Editor-in-Chief
 of <a href="https://dl.acm.org/journal/tops">ACM Transactions on
 Information and System Security</a>; and on the editorial boards
 of <a href="http://www.computer.org/tse">IEEE Transactions on Software
@@ -47,7 +47,7 @@ and <a href="http://cacm.acm.org/">Communications of the ACM</a>.  He
 also served on the Emerging Technology and Research Advisory Committee
 for the United States Department of Commerce for four years.</p>
 
-<p>Dr. Reiter was named
+<p>Prof. Reiter was named
 an <a href="https://awards.acm.org/award_winners/reiter_NC55657">ACM
 Fellow</a> in 2008 and
 an <a href="http://services27.ieee.org/fellowsdirectory/getdetailprofile.html?custNum=45f3SvbQHPKrjG32f9f9Dg%3D%3D">IEEE
