Added distinshuished professorship

--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
 <div class="centervh">
 <h2>Michael Reiter :: Professional Biography</h2>
 
-<p>Michael Reiter is a Professor
+<p>Michael Reiter is a James B. Duke Distinguished Professor
 of <a href="http://www.cs.duke.edu">Computer Science</a>
 and <a href="http://www.ece.duke.edu">Electrical & Computer
 Engineering</a> at <a href="http://www.duke.edu">Duke University</a>.
