--- a/bio.html
+++ b/bio.html
@@ -55,7 +55,12 @@ Fellow</a> in 2014.  In 2016, he was awarded
 the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
 Contributions Award</a> from the ACM Special Interest Group on
 Security, Audit and Control (SIGSAC), for "pioneering research
-contributions and leadership in computer and information security".</p>
+contributions and leadership in computer and information security".
+He was awarded the Lasting Research Award from
+the <a href="https://www.codaspy.org/2024/">2024 ACM CODASPY
+conference</a>, for "vulnerability detection in systems, applications
+and machine learning models as well as developing innovative solutions
+to combat cyber attacks for over three decades."</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </div>
