Shortened bio a bit.

--- a/bio.html
+++ b/bio.html
@@ -47,20 +47,17 @@ and <a href="http://cacm.acm.org/">Communications of the ACM</a>.  He
 also served on the Emerging Technology and Research Advisory Committee
 for the United States Department of Commerce for four years.</p>
 
-<p>Prof. Reiter was named
+<p>Prof. Reiter is
 an <a href="https://awards.acm.org/award_winners/reiter_NC55657">ACM
-Fellow</a> in 2008 and
+Fellow</a> (class of 2008) and
 an <a href="http://services27.ieee.org/fellowsdirectory/getdetailprofile.html?custNum=45f3SvbQHPKrjG32f9f9Dg%3D%3D">IEEE
-Fellow</a> in 2014.  In 2016, he was awarded
+Fellow</a> (2014).  He is the recipient of
 the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
-Contributions Award</a> from the ACM Special Interest Group on
-Security, Audit and Control (SIGSAC), for "pioneering research
-contributions and leadership in computer and information security".
-He was awarded the Lasting Research Award from
-the <a href="https://www.codaspy.org/2024/">2024 ACM CODASPY
-conference</a>, for "vulnerability detection in systems, applications
-and machine learning models as well as developing innovative solutions
-to combat cyber attacks for over three decades."</p>
+Contributions Award</a> (2016) from the ACM Special Interest Group on
+Security, Audit and Control (SIGSAC); the ACM CODASPY Lasting Research
+Award (2024); and Test of Time Awards for particular research
+contributions from the ACM Conference on Computer and Communications
+Security (2019, 2022) and from Intel (2024).</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </div>
