--- a/bio.html
+++ b/bio.html
@@ -55,9 +55,9 @@ Fellow</a> (2014).  He is the recipient of
 the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
 Contributions Award</a> (2016) from the ACM Special Interest Group on
 Security, Audit and Control (SIGSAC); the ACM CODASPY Lasting Research
-Award (2024); and Test of Time Awards for particular research
-contributions from the ACM Conference on Computer and Communications
-Security (2019, 2022) and from Intel (2024).</p>
+Award (2024); and Test of Time Awards from the ACM Conference on
+Computer and Communications Security (2019, 2022) and from Intel
+(2024) for specific research contributions.</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </div>
