--- a/bio.html
+++ b/bio.html
@@ -29,23 +29,16 @@ Professor of Computer Science at UNC.</p>
 <p>Prof. Reiter's research interests include all areas of computer and
 communications security and distributed computing.  He regularly
 publishes and serves on conference organizing committees in these
-fields.  He served as program chair for
-the <a href="http://www.ieee-security.org/TC/SP-Index.html">the
-flagship computer security conferences of the
-IEEE</a>, <a href="http://www.sigsac.org/ccs.html">the ACM</a>,
-and <a href="https://www.ndss-symposium.org">the Internet Society</a>,
-and of <a href="http://www.dsn.org/">the flagship dependability
-conference of the IEEE</a>; as Editor-in-Chief
-of <a href="https://dl.acm.org/journal/tops">ACM Transactions on
-Information and System Security</a>; and on the editorial boards
-of <a href="http://www.computer.org/tse">IEEE Transactions on Software
-Engineering</a>, <a href="http://www.computer.org/tdsc">IEEE
-Transactions on Dependable and Secure Computing</a>,
-the <a href="http://www.springer.com/computer/security+and+cryptology/journal/10207">International
-Journal of Information Security</a>,
-and <a href="http://cacm.acm.org/">Communications of the ACM</a>.  He
-also served on the Emerging Technology and Research Advisory Committee
-for the United States Department of Commerce for four years.</p>
+fields.  He has served as technical program chair for premier research
+conferences in computer security
+(<a href="https://www.ieee-security.org/TC/SP-Index.html">IEEE
+S&amp;P</a>, <a href="https://www.sigsac.org/ccs.html">ACM CCS</a>,
+<a href="https://www.ndss-symposium.org">ISOC NDSS</a>) and
+dependability (<a href="https://www.dsn.org/">IEEE/IFIP DSN</a>), and
+as Editor-in-Chief of <a href="https://dl.acm.org/journal/tops">the
+flagship ACM journal of computer security and privacy</a>.  He also
+served on the Emerging Technology and Research Advisory Committee for
+the United States Department of Commerce for four years.</p>
 
 <p>Prof. Reiter is
 an <a href="https://awards.acm.org/award_winners/reiter_NC55657">ACM
@@ -54,10 +47,10 @@ an <a href="http://services27.ieee.org/fellowsdirectory/getdetailprofile.html?cu
 Fellow</a> (2014).  He is the recipient of
 the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
 Contributions Award</a> (2016) from the ACM Special Interest Group on
-Security, Audit and Control (SIGSAC); the ACM CODASPY Lasting Research
-Award (2024); and Test of Time Awards from the ACM Conference on
-Computer and Communications Security (2019, 2022) and from Intel
-(2024) for specific research contributions.</p>
+Security, Audit and Control;
+the <a href="https://www.codaspy.org/">ACM CODASPY</a> Lasting
+Research Award (2024); and Test of Time Awards from ACM CCS (2019,
+2022) and from Intel (2024) for specific research contributions.</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </div>
