--- a/bio.html
+++ b/bio.html
@@ -36,7 +36,7 @@ S&amp;P</a>, <a href="https://www.sigsac.org/ccs.html">ACM CCS</a>,
 <a href="https://www.ndss-symposium.org">ISOC NDSS</a>) and
 dependability (<a href="https://www.dsn.org/">IEEE/IFIP DSN</a>), and
 as Editor-in-Chief of <a href="https://dl.acm.org/journal/tops">the
-flagship ACM journal of computer security and privacy</a>.  He also
+flagship ACM journal on computer security and privacy</a>.  He also
 served on the Emerging Technology and Research Advisory Committee for
 the United States Department of Commerce for four years.</p>
 
