Added some URLs.

--- a/bio.html
+++ b/bio.html
@@ -49,8 +49,11 @@ the <a href="https://www.sigsac.org/award/sigsac-awards.html">Outstanding
 Contributions Award</a> (2016) from the ACM Special Interest Group on
 Security, Audit and Control;
 the <a href="https://www.codaspy.org/">ACM CODASPY</a> Lasting
-Research Award (2024); and Test of Time Awards from ACM CCS (2019,
-2022) and from Intel (2024) for specific research contributions.</p>
+Research Award (2024); and Test of Time Awards
+from <a href="https://www.sigsac.org/ccs.html">ACM CCS</a> (2019,
+2022) and
+from <a href="https://www.intel.com/content/www/us/en/security/security-practices/security-research/hardware-security-academic-award.html">Intel</a>
+(2024) for specific research contributions.</p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 </div>
