--- a/bio.html
+++ b/bio.html
@@ -35,10 +35,11 @@ conferences in computer security
 S&amp;P</a>, <a href="https://www.sigsac.org/ccs.html">ACM CCS</a>,
 <a href="https://www.ndss-symposium.org">ISOC NDSS</a>) and
 dependability (<a href="https://www.dsn.org/">IEEE/IFIP DSN</a>), and
-as Editor-in-Chief of <a href="https://dl.acm.org/journal/tops">the
-flagship ACM journal on computer security and privacy</a>.  He also
-served on the Emerging Technology and Research Advisory Committee for
-the United States Department of Commerce for four years.</p>
+as Editor-in-Chief of the flagship ACM journal on computer security
+and privacy (<a href="https://dl.acm.org/journal/tops">ACM
+TOPS</a>)</a>.  He also served on the Emerging Technology and Research
+Advisory Committee for the United States Department of Commerce for
+four years.</p>
 
 <p>Prof. Reiter is
 an <a href="https://awards.acm.org/award_winners/reiter_NC55657">ACM
